SimpleSelect DD Z-index issue fixed

--- a/wwwroot/css/FormBuiderStyles.css
+++ b/wwwroot/css/FormBuiderStyles.css
@@ -288,7 +288,7 @@
 }
 
 .grid-cont {
-    overflow: auto;
+    /*overflow: auto;*/
 }
 
     .grid-cont input[type=checkbox] {
